@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2565621 by LKS90, drunken monkey: Added a test for the database defaults
+  submodule.
 - #2684465 by drunken monkey, marthinal: Fixed indexing of related entities on
   multilingual sites.
 - #2566241 by drunken monkey: Fixed index tracker select default value.
